[package]
build = "build.rs"
name = "rust-hyper-server"
version = "0.0.82"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
getset = "0.1"
humantime-serde = "1"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
hyper-staticfile = "0.10.0-alpha.6"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "env-filter"] }

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "rustc", "si"] }
