[package]
build = "build.rs"
name = "rhs"
version = "0.0.171"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
humantime-serde = "1"
http-body-util = "0.1.0"
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
hyper-staticfile = "0.10.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
vergen = { version = "9", features = ["build", "cargo", "rustc", "si"] }

[lints.rust]
unsafe_code = "forbid"
